--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -168,3 +168,11 @@ body {
   width: 1px;
   height: 1px;
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;              /* Chrome, Safari, Edge */
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;   /* IE and old Edge */
+  scrollbar-width: none;      /* Firefox */
+}
